--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -4,18 +4,19 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite App</title>
+  <title>Template v 1.0</title>
 </head>
 
 <body>
   <header>
     <nav>
-
     </nav>
   </header>
+
   <main>
 
   </main>
+
   <footer>
 
   </footer>
